# scheduling

./: README.md
.github/: dependabot.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .gitignore  Cargo.toml  make_new_db.bat  make_new_db.sh
backend/benches/: benchmark.rs
backend/migrations/: 0001_initial_schema.sql  0002_create_events_table.sql
backend/src/: data_model.rs  handlers.rs  lib.rs  main.rs  protocol.rs  scheduling.rs
backend/src/data_model/: account.rs  device.rs  event.rs  graph.rs  task.rs  time.rs
backend/src/extractors/: auth.rs
backend/src/handlers/: accounts.rs  devices.rs  events.rs  tasks.rs
backend/src/protocol/: devices.rs  events.rs  tasks.rs
backend/src/scheduling/: background_service.rs  event_creation.rs  mod.rs  scheduler.rs  task_for_scheduler.rs  test_scheduler.rs  unpub_event.rs  unpublished_event.rs
frontend/: build.gradle.kts  gradle.properties
frontend/app/: build.gradle.kts
frontend/app/schemas/dk.scheduling.schedulingfrontend.database.EventDatabase/: 1.json
frontend/app/src/androidTest/java/dk/scheduling/schedulingfrontend/: EventWorkerTest.kt  TestNotification.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/: ApiButton.kt  App.kt  CreateTaskPage.kt  HomePage.kt  MainActivity.kt  MainLayout.kt  Page.kt  Pages.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/api/: ApiClient.kt  ApiService.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/api/protocol/: Accounts.kt  Devices.kt  Events.kt  Tasks.kt  Timespan.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/background/: EventAlarmSetterWorker.kt  Worker.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/components/: Buttons.kt  ConfirmAlertDialog.kt  DateRangePicker.kt  Dateformat.kt  Heading.kt  Loading.kt  PermissionAlertDialog.kt  Pickers.kt  StandardDropDownMenu.kt  TextFields.kt  TimePicker.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/database/: EventAlarm.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/datasources/: AccountDataSource.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/device/: CreateDevicePage.kt  Device.kt  DeviceState.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/eventNotify/: EventAlarmReceiver.kt  EventNotifyScheduler.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/eventnotification/: EventAlarm.kt  EventAlarmDao.kt  EventAlarmReceiver.kt  EventDatabase.kt  EventNotifyScheduler.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/exceptions/: CreationFailedException.kt  DeletionFailedException.kt  NoBodyWasProvidedException.kt  UnauthorizedException.kt  UnsuccessfulRequestException.kt  UserNotLoggedIn.kt  UserNotLoggedInException.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/loginpage/: LoginPage.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/model/: Device.kt  DeviceOverview.kt  DeviceState.kt  DeviceTask.kt  Duration.kt  Status.kt  TaskEvent.kt  TaskForm.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/module/: AppModule.kt  IAppModule.kt  TestMockAppModule.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/pages/: AccountPage.kt  ApiButton.kt  CreateDevicePage.kt  CreateTaskPage.kt  HomePage.kt  LoginPage.kt  Page.kt  Page3.kt  SignUpPage.kt  TaskOverviewPage.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/repositories/: AccountDataSource.kt  AccountRepository.kt  DummyAccountRepository.kt  IAccountRepository.kt  LoginRepository.kt  UserNotLoggedIN.kt  UserNotLoggedIn.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/sharedcomponents/: Buttons.kt  Dateformat.kt  Heading.kt  TextFields.kt
frontend/app/src/main/java/dk/scheduling/schedulingfrontend/signuppage/: SignUpPage.kt
frontend/app/src/main/java/testdata/: DeviceOverviewTestData.kt  DeviceTaskTestData.kt  DummyAccountRepository.kt  DummyDeviceRepository.kt  DummyEventRepository.kt  DummyTaskRepository.kt  TestData.kt
frontend/app/src/main/res/values/: strings.xml
frontend/app/src/test/java/dk/scheduling/schedulingfrontend/: ApiServiceTest.kt  CreateTaskPageTest.kt  DateRangeTest.kt  DurationTest.kt  OverviewRepositoryTest.kt  TaskFormTest.kt  Test.kt
frontend/gradle/wrapper/: gradle-wrapper.properties
protocol/: Cargo.toml
protocol/src/: accounts.rs  devices.rs  events.rs  graph.rs  lib.rs  scheduling.rs  tasks.rs  time.rs
simulator/: Cargo.toml
simulator/benches/: benchmark.rs
simulator/src/: compare_algorithms.rs  data_factory.rs  generate_data.rs  http_client.rs  lib.rs  main.rs
(+49 files in other folders)
