[package]
name = "scheduling-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "macros", "migrate", "runtime-tokio", "chrono", "uuid"] }
serde = "1.0"
serde_with = "3.7"
dotenv = "0.15"
argon2 = { version = "0.5", features = ["std"] }
derive_more = "0.99"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
itertools = "0.12"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5.1", features = ["async_tokio", "async_futures"] }
rand = "0.9.0-alpha.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
http-body-util = "0.1"

[[bench]]
name = "benchmark"
harness = false