[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["macros", "chrono", "uuid"] }
serde = "1.0"
serde_with = { version = "3.7", features = ["chrono_0_4"] }
derive_more = "0.99"

