[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.1"
http-body-util = "0.1"
bytes = "1.6"
serde = "1.0"
serde_with = "3.7"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.0-alpha.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
criterion = { version = "0.5.1", features = ["async_tokio", "async_futures"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bench]]
name = "benchmark"
harness = false
